<resources>
    <string name="app_name">Quiz App</string>
    <string name="welcome">Welcome!</string>
    <string name="entername">Please enter your name</string>
    <string name="name">Name</string>
    <string name="Start">Start Quiz</string>
    <string name="Exit">X</string>
    <string name="Question">Question</string>
    <string name="OneOf">1/60</string>
    <string name="Next">Далее</string>
    <string name="Result">Результат</string>
    <string name="Congrats">Поздравляем!</string>
    <string name="YourName">Имя</string>
    <string name="YourFinalResult">Итоговый результат</string>
    <string name="Finish">Закончить</string>
    <string name="Recommendation">Вы тупой</string>
</resources>